--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0",
-    "inquirer": "^9.2.16"
+    "figlet": "^1.7.0",
+    "inquirer": "^9.2.16",
+    "ora": "^8.0.1"
   },
   "devDependencies": {
+    "@types/figlet": "^1.5.8",
     "@types/inquirer": "^9.0.7"
   }
 }
